docs/semantic-ontology/linkml/tests/valid/lifecycle_assertion-lifecycle-assertion-test-0.jsonld
{
  "@context": {
    "@vocab": "https://w3id.org/facis/dcs/ontology/v1#",
    "dcs": "https://w3id.org/facis/dcs/ontology/v1#",
    "xsd": "http://www.w3.org/2001/XMLSchema#"
  },
  "@id": "urn:doc:lifecycle-assertion-test",
  "@type": "ContractTemplate",
  "documentTitle": "Lifecycle Assertion Test",
  "metadata": {
    "@type": "TemplateMetadata",
    "title": "Lifecycle Assertion Test"
  },
  "documentStructure": {
    "@type": "DocumentStructure",
    "layout": [
      {
        "@type": "LayoutNode",
        "isRoot": true,
        "children": [
          "urn:doc:lifecycle-assertion-test#s1"
        ]
      },
      {
        "@type": "LayoutNode",
        "@id": "urn:doc:lifecycle-assertion-test#s1",
        "children": [
          "urn:doc:lifecycle-assertion-test#c1"
        ]
      }
    ],
    "blocks": [
      {
        "@type": "Section",
        "@id": "urn:doc:lifecycle-assertion-test#s1",
        "title": "1. Terms"
      },
      {
        "@type": "Clause",
        "@id": "urn:doc:lifecycle-assertion-test#c1",
        "content": [
          "Testing lifecycle assertion embedding."
        ]
      }
    ]
  }
}